[gd_scene load_steps=11 format=3 uid="uid://1jofyd1fb13e"]

[ext_resource type="Script" uid="uid://d2nqrriy82kki" path="res://AppManager/app_manager.gd" id="1_3s7ri"]
[ext_resource type="Script" uid="uid://dnpyqmg5e03hs" path="res://state_machine.gd" id="1_uyv8v"]
[ext_resource type="Script" uid="uid://cyusmjp0prh62" path="res://AppManager/app_state_splash.gd" id="2_dk1i5"]
[ext_resource type="Script" uid="uid://d0ojua8ijt0ol" path="res://AppManager/app_state_in_game.gd" id="3_3momj"]
[ext_resource type="Script" uid="uid://7xpvkrvokmty" path="res://AppManager/app_state_main_menu.gd" id="4_aloiq"]
[ext_resource type="Script" uid="uid://diimxrjecjy8b" path="res://AppManager/app_state_new_game_init.gd" id="4_qc6je"]
[ext_resource type="Script" uid="uid://gdsk0drlsc7x" path="res://AppManager/app_state_paused.gd" id="4_ywd8t"]
[ext_resource type="Script" uid="uid://dtt0o1hul51dx" path="res://AppManager/app_state_load_game_init.gd" id="6_myns1"]
[ext_resource type="Script" uid="uid://cqoe5mpio4lgh" path="res://AppManager/app_state_minimap.gd" id="9_t1nyb"]
[ext_resource type="Script" uid="uid://cpfyq5hju474l" path="res://AppManager/app_state_quitting_to_main.gd" id="9_y3jwa"]

[node name="AppManager" type="Node"]
script = ExtResource("1_3s7ri")
developer_mode = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_uyv8v")

[node name="AppStateSplash" type="Node" parent="StateMachine"]
script = ExtResource("2_dk1i5")

[node name="AppStateMainMenu" type="Node" parent="StateMachine"]
script = ExtResource("4_aloiq")

[node name="AppStateNewGameInit" type="Node" parent="StateMachine"]
script = ExtResource("4_qc6je")

[node name="AppStateLoadGameInit" type="Node" parent="StateMachine"]
script = ExtResource("6_myns1")

[node name="AppStateInGame" type="Node" parent="StateMachine"]
script = ExtResource("3_3momj")

[node name="AppStatePausedInGame" type="Node" parent="StateMachine"]
script = ExtResource("4_ywd8t")

[node name="AppStateQuittingToMain" type="Node" parent="StateMachine"]
script = ExtResource("9_y3jwa")

[node name="AppStateMinimap" type="Node" parent="StateMachine"]
script = ExtResource("9_t1nyb")

[node name="AppStateIntro" type="Node" parent="StateMachine"]

[node name="AppStateEnding" type="Node" parent="StateMachine"]

[node name="AppStateCredits" type="Node" parent="StateMachine"]

[node name="Timer" type="Timer" parent="StateMachine"]
